; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/fs/extr_namespace.c_mnt_free_id.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/fs/extr_namespace.c_mnt_free_id.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.vfsmount = type { i32 }

@vfsmount_lock = common dso_local global i32 0, align 4
@mnt_id_ida = common dso_local global i32 0, align 4
@mnt_id_start = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.vfsmount*)* @mnt_free_id to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @mnt_free_id(%struct.vfsmount* %0) #0 {
  %2 = alloca %struct.vfsmount*, align 8
  %3 = alloca i32, align 4
  store %struct.vfsmount* %0, %struct.vfsmount** %2, align 8
  %4 = load %struct.vfsmount*, %struct.vfsmount** %2, align 8
  %5 = getelementptr inbounds %struct.vfsmount, %struct.vfsmount* %4, i32 0, i32 0
  %6 = load i32, i32* %5, align 4
  store i32 %6, i32* %3, align 4
  %7 = call i32 @spin_lock(i32* @vfsmount_lock)
  %8 = load i32, i32* %3, align 4
  %9 = call i32 @ida_remove(i32* @mnt_id_ida, i32 %8)
  %10 = load i32, i32* @mnt_id_start, align 4
  %11 = load i32, i32* %3, align 4
  %12 = icmp sgt i32 %10, %11
  br i1 %12, label %13, label %15

13:                                               ; preds = %1
  %14 = load i32, i32* %3, align 4
  store i32 %14, i32* @mnt_id_start, align 4
  br label %15

15:                                               ; preds = %13, %1
  %16 = call i32 @spin_unlock(i32* @vfsmount_lock)
  ret void
}

declare dso_local i32 @spin_lock(i32*) #1

declare dso_local i32 @ida_remove(i32*, i32) #1

declare dso_local i32 @spin_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
